# 3DSMC-ARMarker-Voxel-Carving

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh
00_aruco_markers_detection/: .gitignore  main.cpp
00_aruco_markers_detection/aruco-markers-detection/: Info.plist  calibration_params.yml
00_aruco_markers_detection/aruco-markers-detection.xcodeproj/: project.pbxproj
00_aruco_markers_detection/aruco-markers-detection/input/obj_duck/run_2/: cam_info.txt
00_aruco_markers_detection/aruco-markers-detection/input/obj_owl/run_2/: cam_info.txt
00_aruco_markers_detection/aruco-markers-detection/input/obj_unicorn/run_1/: cam_info.txt
00_aruco_markers_detection/aruco-markers-detection/input/obj_unicorn/run_2/: cam_info.txt
00_aruco_markers_detection/input/: calibration_params.yml
01_data_acquisition/image_callibrator/: build.bat  calibdata.txt  caliberation_result.txt  main.cpp
01_data_acquisition/image_realign_advisor/: build.bat  main.cpp
01_data_acquisition/images/obj_duck/run_2/: cam_info.txt
01_data_acquisition/images/obj_owl/run_1/: cam_info.txt
01_data_acquisition/images/obj_owl/run_2/: cam_info.txt  camera_info.txt
01_data_acquisition/images/obj_unicorn/run_1/: cam_info.txt
01_data_acquisition/images/obj_unicorn/run_2/: cam_info.txt
01_data_acquisition/images/owl/run_1/: camera_info.txt
01_data_acquisition/images/owl/run_3/: camera_info.txt
01_data_acquisition/linear_scale_generator/: build.bat  build.sh  main.cpp
01_data_acquisition/linear_scale_generator/pdf/: build.sh  scale.tex
01_data_acquisition/linear_scale_generator/post_processing/: scale.kra  segments_1.kra  segments_2.kra  segments_3.kra  segments_4.kra
02_voxel_carving/: build.sh  main.cpp  math.cpp  voxel_carving.cpp  voxel_carving.hpp
03_marching_cubes/: main.cpp  marching_cubes.cpp  marching_cubes.h  projected_marching_cubes.cpp  simple_marching_cubes.cpp  simple_marching_cubes.h  simple_mesh.cpp  simple_mesh.h  test_torus.off
03_marching_cubes/results/: point_cloud_duck.ply  test_torus.off
03_marching_cubes/surface/: implicit_surface.cpp  implicit_surface.h
04_texture_backprojection/: backproject.cpp  mesh_stuff.hpp
3rd_party_libs/opencv3.4/include/opencv2/flann/: lsh_table.h
3rd_party_libs/opencv3.4/lib_win_64/: opencv_world3414d.lib
aruco_markers_detection/aruco-markers-detection.xcodeproj/: project.pbxproj
aruco_markers_detection/aruco-markers-detection.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
aruco_markers_detection/aruco-markers-detection.xcodeproj/project.xcworkspace/xcuserdata/artem.xcuserdatad/: UserInterfaceState.xcuserstate
aruco_markers_detection/aruco-markers-detection.xcodeproj/xcuserdata/artem.xcuserdatad/xcschemes/: xcschememanagement.plist
aruco_markers_detection/opecv-test-2/: #main.cpp  main.cpp  test.cpp
common/: Volume.cpp  common.cpp  common.h  image.cpp  image.h  volume.cpp  volume.h
